- 算法实现由javacv切换至opencv，长时间运行。内存占用从5.7G降低至2.3G，通过FCA or 量化，内存进一步降低至1.1G - 底层截图逻辑切换至rust预处理ROI,减少大量无效内存拷贝 - 添加arrow识别模型，实时识别角色朝向 - 添加处理资源文件逻辑